# ms-mrp-brkga-lr

./: BRKGA.h  CMakeLists.txt  MSDecoder.cpp  MSDecoder.h  edmonds_optimum_branching_impl.hpp  samplecode.cpp  script-execution.py
combinatorio_4/: result_washington-100-10-6.txt  result_washington-100-100-43.txt  result_washington-100-20-10.txt  result_washington-100-30-12.txt  result_washington-100-40-18.txt  result_washington-100-50-27.txt  result_washington-100-60-34.txt  result_washington-100-70-39.txt  result_washington-100-80-32.txt  result_washington-100-90-43.txt  result_washington-200-125-55.txt  result_washington-200-150-61.txt  result_washington-200-175-74.txt  result_washington-200-200-114.txt  result_washington-200-225-135.txt  result_washington-200-250-109.txt  result_washington-200-275-146.txt  result_washington-200-300-136.txt  result_washington-200-325-170.txt  result_washington-200-350-150.txt  result_washington-50-10-6.txt  result_washington-50-100-45.txt  result_washington-50-20-11.txt  result_washington-50-30-15.txt  result_washington-50-40-23.txt  result_washington-50-50-28.txt  result_washington-50-60-35.txt  result_washington-50-70-37.txt  result_washington-50-80-39.txt  result_washington-50-90-51.txt  result_washington-75-10-4.txt  result_washington-75-100-52.txt  result_washington-75-20-12.txt  result_washington-75-30-16.txt  result_washington-75-40-21.txt  result_washington-75-50-30.txt  result_washington-75-60-25.txt  result_washington-75-70-42.txt  result_washington-75-80-48.txt  result_washington-75-90-47.txt
(+40 files in other folders)
